# orchestrator-codex

./: .gitignore  CLAUDE.md  README.md  config.yaml  development.md  orchestrator.spec  pyproject.toml
.github/workflows/: release.yml
agents/brain/: prompt.md  settings.json
agents/shared/: lib.sh
agents/worker/: prompt.md  settings.json
brain/: CLAUDE.md
demo/: README.md  app.py  config.yaml  seed.py  story.md
docs/: 001-prd.md  002-implementation-plan.md  003-ui-design.md  004-e2e-test-expectations.md  005-demo-walkthrough.md  005-ui-design.md  006-terminal-control-coordination.md  008-direct-pty-streaming.md  009-reconnect-redesign.md  010-ui-design.md  012-releasing.md  014-file-explorer-design.md  015-interactive-cli-design.md  017-remote-browser-view.md  018-orch-browser-command.md  019-tmp-recovery.md  021-ui-design-system-v2.md  022-ui-design-principles.md  024-terminal-streaming-simplification.md  025-remote-terminal-history-research.md  026-aggressive-migration-plan.md  028-reconnect-ux-improvements.md  029-reconnect-oscillation-investigation.md  E2E_EXPECTATIONS.md  IMPLEMENTATION.md  PRD.md  PROJECT_FOCUS_MODE_PRD.md  TUNNEL_ON_DEMAND.md  UI_DESIGN.md  architecture.md  demo-walkthrough.md  direct-pty-streaming.md  features.md  session-id-design-analysis.md  terminal-control-coordination.md  test_plan_remote_architecture.md
docs/design_logs/: 001-prd.md  007-tunnel-on-demand.md  009-reconnect-redesign.md  011-trends-section-design.md  013-skills-management.md  014-file-explorer-design.md  016-remote-worker-server.md  017-remote-browser-view.md  018-orch-browser-command.md  020-typing-latency-optimization.md  022-ui-design-principles.md  023-task-artifacts.md  030-prs-page.md  033-human-hours-tracking.md  034-brain-heartbeat-autonomy.md  035-work-verification.md  036-blocked-worker-status.md  037-brain-correction-learning.md  038-provider-codex-compatibility-plan.md  039-provider-codex-task-backlog.md  040-provider-codex-detailed-task-packets.md  041-codex-hooks-investigation.md  042-provider-codex-implementation-log.md  impl_plan_fix_known_bugs.md
docs/learnings/: 001-health-check-fail-closed.md  002-sql-defaults-must-match-model.md  003-socket-eof-ambiguity.md  004-no-return-in-finally.md  005-migration-side-effects.md  006-test-discipline.md  007-reconnect-postmortem-2026-03.md  008-never-kill-daemon-on-transient-failure.md  009-tunnel-monitor-must-update-status.md  010-patch-endpoint-must-be-task-aware.md  011-daemon-path-non-interactive-ssh.md  012-pyinstaller-text-read-files.md  013-nonblocking-sendall-and-rendering-strips-colors.md  014-recover-tunnels-must-include-disconnected.md  015-react-sessionstorage-and-shared-state.md  016-light-mode-color-consistency.md  017-orphan-cleanup-must-match-all-parents.md  018-o-rdwr-fifo-masks-writer-death.md  README.md
docs/roadmaps/: 039-provider-codex-task-backlog.md  040-provider-codex-detailed-task-packets.md
examples/task-cli/: README.md  task_cli.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
orchestrator/: __init__.py  __main__.py  backup.py  config_defaults.py  launcher.py  main.py  paths.py  utils.py
orchestrator/agents/: __init__.py  deploy.py
orchestrator/api/: app.py  deps.py  upload_utils.py  websocket.py  ws_browser_view.py  ws_terminal.py
orchestrator/auth/: keychain.py  token.py
orchestrator/automation/: auto_approve.py
orchestrator/brain/: __init__.py  cli_scripts.py
orchestrator/browser/: __init__.py  cdp_proxy.py  cdp_worker_proxy.py
orchestrator/core/: events.py  human_tracker.py  lifecycle.py  orchestrator.py  state_manager.py
orchestrator/llm/: actions.py  brain.py  client.py  context_selector.py  templates.py
orchestrator/mcp/: __init__.py  server.py
orchestrator/providers/: __init__.py  config.py  registry.py  runtime.py
orchestrator/recovery/: detector.py  rebrief.py  snapshot.py
orchestrator/scheduler/: conflicts.py  dependencies.py  matcher.py  scheduler.py
orchestrator/session/: __init__.py  health.py  reconnect.py  state_machine.py  tunnel.py  tunnel_monitor.py
orchestrator/state/: db.py  models.py
orchestrator/terminal/: _rws_client.py  _rws_daemon.py  _rws_pool.py  _rws_pty_renderer.py  claude_update.py  control.py  file_sync.py  interactive.py  manager.py  markers.py  monitor.py  output_parser.py  pty_stream.py  remote_file_server.py  remote_worker_server.py  session.py  skill_installer.py  ssh.py
orchestrator/worker/: __init__.py  cli_scripts.py
prompts/: brain_claude.md  worker_claude_template.md
prompts/skills/: check_worker.md
scripts/: backfill_task_indexes.py  build_app.sh  build_sidecar.py  bump-build-tag-release.sh  bump-build-tag.sh  bump-version.sh  cleanup_sessions.py  generate-latest-json.sh  seed_db.py  sign-sidecar.sh  test_auth.py
src-tauri/: Cargo.toml  loading.html  tauri.conf.json
src-tauri/capabilities/: default.json  remote-update.json
src-tauri/icons/: icon.icns
src-tauri/loading/: index.html
src-tauri/src/: lib.rs
src-tauri/tmux-bundle/: libevent_core-2.1.7.dylib  libncursesw.6.dylib  libutf8proc.3.dylib  tmux
tests/: conftest.py  test_pty_stream.py  test_reconnect_races.py  test_remote_worker_server.py  test_terminal_sync.py  test_tui_safety_races.py
tests/e2e/: conftest.py  test_dashboard.py
tests/integration/: conftest.py  test_api_routes.py  test_context_api.py  test_files_api.py  test_human_hours_api.py  test_migrations.py  test_notifications.py  test_pty_stream_integration.py  test_repositories.py  test_seed.py  test_skills_api.py  test_terminal_control.py  test_terminal_manager.py  test_trends_detail.py
tests/sandbox/: test_stream_fidelity.py
tests/unit/: conftest.py  test_actions.py  test_backup.py  (+81 more)
(+296 files in other folders)
