[project]
name = "claude-orchestrator"
version = "1.4.1"
description = "Meta-agent that manages multiple concurrent Claude Code sessions"
requires-python = ">=3.11"

dependencies = [
    # CLI & Display
    "click>=8.0",
    "rich>=13.0",
    # Web Server & API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "jinja2>=3.1.0",
    # LLM & HTTP
    "anthropic>=0.42.0",
    "httpx>=0.27.0",
    # Config & Data
    "pyyaml>=6.0",
    "python-dateutil",
    "pyzipper>=0.3.6",
    "playwright>=1.58.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-xdist>=3.5.0",
    "pytest-timeout>=2.3.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]
e2e = [
    "playwright>=1.49.0",
]
build = [
    "pyinstaller>=6.0",
]
knowledge = [
    "chromadb>=0.6.0",
]

[project.scripts]
orchestrator = "orchestrator.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["orchestrator"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]  # Run all tests (unit, integration, e2e)
addopts = "-n auto"    # Run tests in parallel (all test types support worker isolation)
timeout = 10           # Fail any test that takes longer than 10 seconds
markers = [
    "allow_network: permit real socket connections in this test",
    "allow_subprocess: permit real subprocess calls in this test",
    "allow_threading: permit real thread creation in this test",
    "allow_sleep: permit real time.sleep calls in production code",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
