[package]
name = "claude-orchestrator"
version = "1.3.5"
description = "Orchestrator — manage multiple Claude Code sessions"
edition = "2021"

[lib]
name = "claude_orchestrator_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
rfd = "0.16"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking"] }
